<resources>
    <string name="app_name">11 All Video Downloader</string>
    <string name="paste_link">Paste link</string>
    <string name="paste">Paste</string>
    <string name="download">Download</string>
    <string name="label_ok">Ok</string>
    <string name="message_no_permissions">Permission Denied.</string>
    <string name="saved">Saved!</string>
    <string name="ringtone_maker">Ringtone Maker</string>
    <string name="video_editor">Video Editor</string>
    <string name="collage_maker">Collage Maker</string>
    <string name="insta_grid">Insta Grid</string>
    <string name="status_n_saver">Status\nSaver</string>
    <string name="cleaner">Cleaner</string>
    <string name="demo_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="search_wallpaper">Search wallpapers</string>
    <string name="comedy">Comedy</string>
    <string name="watch">Watch</string>
    <string name="screen_recorder">Screen recorder</string>
    <string name="status">Status</string>
    <string name="paste_instagram_link_here">Paste Instagram link here</string>
    <string name="paste_facebook_link_here">Paste Facebook link here</string>
    <string name="ringtones">Ringtones</string>
    <string name="status_maker">Status Maker</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="share_media">Share</string>
    <string name="save">Save</string>
    <string name="dialog_save_text">Are you sure want to Save this Image?</string>
    <string name="dialog_discard_text">Your changes will be discarded.\nDo you want to proceed?</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="save_and_share"><![CDATA[Save & Share]]></string>
    <string name="photo_filters">Photo Filters</string>
    <string name="image_saved_text">Image saved successfully..!</string>
    <string name="photo_warp">Photo Warp</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="your_age">Your Age</string>
    <string name="age_details_subtitle">Here is your age simplified and converted to many formats with all details!</string>
    <string name="_75_high">75% (High)</string>
    <string name="_25_low">25% (Low)</string>
    <string name="_50_medium">50% (Medium)</string>
    <string name="video_player">Video Player</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="downloads">Downloads</string>
    <string name="dialog_discard_title">Changes will not be saved. Do you want to proceed?</string>
    <string name="discard">Discard</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="photo_compress">Photo Compress</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="version">Version</string>
    <string name="share_app_desc"><![CDATA[Watch videos, Listen your favourite music &amp; share them with your friends using this video music player!\nDownload here:\nhttps://play.google.com/store/apps/details?id=%s]]></string>
    <string name="rating_desc">If %s makes you happy and satisfy. Please give us 5 stars</string>
    <string name="social_downloader">Social Downloader</string>
    <string name="status_saver">Status Saver</string>
    <string name="my_downloads">Downloads</string>
    <string name="collage">Collage</string>
    <string name="more_tools">More Tools</string>
    <string name="funny">Funny</string>
    <string name="compress">Compress</string>
    <string name="filter">Filter</string>
    <string name="warp">Warp</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="more">More</string>
    <string name="age_calc">Age Calc</string>
    <string name="instagram_grid">Instagram Grid</string>
    <string name="grid_maker">Grid Maker</string>
    <string name="free_video_downloader">Free Video Downloader</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="ignore">Ignore</string>
    <string name="permissions">Permissions:</string>
    <string name="clean">Clean</string>
    <string name="app_cleaner">App Cleaner</string>
    <string name="junk_file">Junk File</string>
    <string name="phone_boost">Phone Boost</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="can_be_deleted">Can Be Deleted</string>
    <string name="apps_data">Apps Data</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="clean_trash">Clean Trash</string>
    <string name="battery_boost">Battery Boost</string>
    <string name="cleanup_suggested">Cleanup suggested</string>
    <string name="upload">Upload</string>
    <string name="internet_speed_test">Internet Speed Test</string>
    <string name="sketchify">Sketchify</string>
    <string name="cartoonify">Cartoonify</string>
    <string name="my_creations">My Creations</string>
    <string name="junk_files_found">Junk files found : %s</string>
    <string name="optimize">Optimize</string>
</resources>