<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_default"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/imgAppSettings"
            android:layout_toEndOf="@id/imgAppIcon"
            android:fontFamily="@font/gilroy_semibold"
            android:paddingStart="16dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAppSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_settings_about"
            app:tint="@color/black" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/permissions"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtPermissionsVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/gilroy_semibold"
        android:textColor="@color/md_red"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnIgnore"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/top_bar_gradient_pink1"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/ignore"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btnDelete"
                app:layout_constraintEnd_toStartOf="@id/btnDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnDelete" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/top_bar_gradient_green"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnIgnore"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>