<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackDrawer"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_back_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center_vertical"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/headerImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/home_svg" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/adCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:id="@+id/adFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="36dp"
        android:background="#9b9b9b" />

    <LinearLayout
        android:id="@+id/llShare"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_share_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/text_color_drawer"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRate"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_rate_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical"
            android:text="@string/rate"
            android:textColor="@color/text_color_drawer"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_policy_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@color/text_color_drawer"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVersion"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_version_drawer" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical"
            android:text="@string/version"
            android:textColor="@color/text_color_drawer"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical"
            android:text="1.0"
            android:textColor="@color/text_color_drawer"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>